--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 header {
     width: 100%;
-    padding: 10px 20px; /* Ustawiłem padding, aby dostosować przestrzeń wokół elementów */
+    padding: 10px 20px;
     background-color: #bf90e6;
     color: white;
     text-align: center;
@@ -24,13 +24,15 @@ header {
     position: relative;
     height: 60px;
     line-height: 20px;
-    margin-bottom: 20px; /* Dodano odstęp poniżej nagłówka */
+    margin-bottom: 20px;
 }
 
 h1 {
-    font-size: 1.8rem; /* Zmniejszono font-size dla lepszej responsywności */
+    font-size: 1.8rem;
     margin: 0;
     padding-bottom: 5px;
+    text-align: center;
+    margin-left: 20px;
 }
 
 .menu-icon {
@@ -40,8 +42,8 @@ h1 {
 
 .background-toggles {
     display: flex;
-    gap: 10px; /* Odstęp między przyciskami */
-    margin-right: 15px; /* Margines z prawej strony */
+    gap: 10px;
+    margin-right: 15px;
 }
 
 .background-1, .background-2, .background-3 {
@@ -74,12 +76,13 @@ h1 {
     transition: 0.5s;
     padding-top: 60px;
     z-index: 1;
+    box-sizing: border-box;
 }
 
 .side-nav a {
     padding: 10px 15px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     color: white;
     display: block;
     transition: 0.3s;
@@ -152,13 +155,14 @@ h1 {
 footer {
     height: 60px;
     background-color: #bf90e6;
-    width: 100%;
-    margin-bottom: 0;
+    width: 100vw; /* Zmiana z 100% na 100vw */
+    margin: 0; /* Usuń marginesy */
     display: flex;
-    justify-content: center; 
-    align-items: center; 
-    padding: 0px; 
-    text-align: center; 
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    text-align: center;
+    box-sizing: border-box;
 }
 
 .copyright {
@@ -175,6 +179,10 @@ footer {
 
     .image-div, .text-div {
         height: 50vh;
+    }
+
+    .side-nav {
+        width: 50%; /* Zmniejszenie szerokości side-nav na mniejszych ekranach */
     }
 }
 
@@ -202,4 +210,24 @@ footer {
 
 .button-link:hover {
     background-color: #444;
+}
+
+.social-media {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 3rem;
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.social-media a {
+    color: black;
+}
+
+.social-media p {
+    display: inline;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
 }
