--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #f0f0f0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+    overflow-x: hidden; /* Zapobiega poziomemu przewijaniu */
 }
 
 header {
@@ -25,6 +26,7 @@ header {
     height: 60px;
     line-height: 20px;
     margin-bottom: 20px;
+    box-sizing: border-box; /* Zapobiega powstawaniu nadmiarowej szerokości */
 }
 
 h1 {
@@ -76,7 +78,7 @@ h1 {
     transition: 0.5s;
     padding-top: 60px;
     z-index: 1;
-    box-sizing: border-box;
+    box-sizing: border-box; /* Zapobiega powstawaniu nadmiarowej szerokości */
 }
 
 .side-nav a {
@@ -108,6 +110,7 @@ h1 {
     height: 60vh;
     margin-bottom: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box; /* Zapobiega powstawaniu nadmiarowej szerokości */
 }
 
 .image-div, .text-div {
@@ -120,6 +123,7 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    box-sizing: border-box; /* Zapobiega powstawaniu nadmiarowej szerokości */
 }
 
 .text-div {
@@ -131,6 +135,7 @@ h1 {
     background-color: white;
     color: black;
     text-align: center;
+    box-sizing: border-box; /* Zapobiega powstawaniu nadmiarowej szerokości */
 }
 
 .image-overlay {
@@ -155,14 +160,14 @@ h1 {
 footer {
     height: 60px;
     background-color: #bf90e6;
-    width: 100vw; /* Zmiana z 100% na 100vw */
-    margin: 0; /* Usuń marginesy */
+    width: 100%;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0px;
     text-align: center;
-    box-sizing: border-box;
+    box-sizing: border-box; /* Zapobiega powstawaniu nadmiarowej szerokości */
 }
 
 .copyright {
