--- a/style.css
+++ b/style.css
@@ -401,7 +401,15 @@ footer {
 .icon-link:hover {
     color: var(--button-color);
 }
-
+#home{
+    height:100vh;
+}
+#gallery{
+    height:100vh;
+}
+#contact{
+    height:100vh;
+}
 @media (max-width: 934px) {
     .hero {
         flex-direction: column;
@@ -503,4 +511,13 @@ footer {
 .gallery-item:hover .price-tag span {
     transform: none;
     transition: none;
+}
+#home{
+    height:100vh;
+}
+#gallery{
+    height:100vh;
+}
+#contact{
+    height:100vh;
 }
