--- a/style.css
+++ b/style.css
@@ -402,13 +402,13 @@ footer {
     color: var(--button-color);
 }
 #home{
-    height:100vh;
+    height:100vh !important;
 }
 #gallery{
-    height:100vh;
+    height:100vh !important;
 }
 #contact{
-    height:100vh;
+    height:100vh !important;
 }
 @media (max-width: 934px) {
     .hero {
@@ -513,11 +513,11 @@ footer {
     transition: none;
 }
 #home{
-    height:100vh;
+    height:100vh !important;
 }
 #gallery{
-    height:100vh;
+    height:100vh !important;
 }
 #contact{
-    height:100vh;
+    height:100vh !important;
 }
